# neural-translate

./: .gitignore  README.md  pyproject.toml
neural_translate/: main.py
neural_translate/config/: config.yml  language_pairs.yml
neural_translate/models/: t5_translate.ipynb  t5_translate.py
neural_translate/src/: translate.py
