[tool.poetry]
name = "neural-translate"
version = "0.0.1"
description = ""
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"
packages = [{ include = "neural_translate" }]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
transformers = "^4.28.1"
datasets = "^2.12.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
bitarray = "^2.7.3"
scikit-learn = "^1.2.2"
sacrebleu = "^2.3.1"
sacremoses = "^0.0.53"
sentencepiece = "^0.1.99"
evaluate = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
